# envelop-budget-lib

./: .all-contributorsrc  .gitignore  Cargo.toml  README.md  readme.md
budget_manager/: Cargo.toml
budget_manager/migrations/2022-11-15-073237_create_transactions/: down.sql  up.sql
budget_manager/src/: lib.rs  schema.rs  test_helpers.rs  transaction_op.rs
budget_manager/src/budgeting/: budget_account.rs  budgeting_errors.rs  category.rs  expense_category.rs  mod.rs  tests.rs  transaction.rs  transaction_category.rs
budget_manager/src/budgeting/storage/: sqlite.rs
budget_manager_ui/: Cargo.toml  build.rs  org.tmn.BudgetTracker.gschema.xml
budget_manager_ui/resources/: budget_account_row.ui  budget_balance_entry.ui  calendar_button.ui  category_row.ui  expense_category_row.ui  filter_menu.ui  main_window.ui  new_category_dialog.ui  new_transaction_dialog.ui  resources.gresource.xml  summary.ui  transaction_filter.ui  transaction_row.ui
budget_manager_ui/src/: main.rs
budget_manager_ui/src/budget_account/: mod.rs
budget_manager_ui/src/budget_account/budget_account_object/: imp.rs  mod.rs
budget_manager_ui/src/budget_account/budget_account_row/: imp.rs  mod.rs
budget_manager_ui/src/calender_button/: imp.rs  mod.rs
budget_manager_ui/src/category/: mod.rs
budget_manager_ui/src/category/category_object/: imp.rs  mod.rs
budget_manager_ui/src/category/category_row/: imp.rs  mod.rs
budget_manager_ui/src/expense_category/: mod.rs
budget_manager_ui/src/expense_category/expense_category_object/: imp.rs  mod.rs
budget_manager_ui/src/expense_category/expense_category_row/: mod.rs
budget_manager_ui/src/new_category_dialog/: imp.rs  mod.rs
budget_manager_ui/src/new_transaction_dialog/: imp.rs  mod.rs
budget_manager_ui/src/summary/: mod.rs
budget_manager_ui/src/summary/summary_object/: imp.rs  mod.rs
budget_manager_ui/src/summary/summary_table/: imp.rs  mod.rs
budget_manager_ui/src/transaction/transaction_object/: imp.rs  mod.rs
budget_manager_ui/src/transaction/transaction_row/: imp.rs  mod.rs
budget_manager_ui/src/window/: imp.rs  mod.rs
migrations/2022-11-15-073237_create_transactions/: down.sql  up.sql
resources/: main_window.ui  transaction_row.ui
src/: cli.yaml  lib.rs  main.rs  schema.rs  test_dir.rs  test_helpers.rs
src/budgeting/: budget.rs  budget_account.rs  budgeting_errors.rs  category.rs  expense_category.rs  mod.rs  tests.rs  transaction.rs
src/expense_category/: mod.rs
src/expense_category/expense_category_object/: imp.rs  mod.rs
src/expense_category/expense_category_row/: imp.rs  mod.rs
src/speller/: mod.rs
src/transaction/: mod.rs
src/transaction/transaction_object/: imp.rs  mod.rs
src/transaction/transaction_row/: imp.rs  mod.rs
src/transaction_object/: mod.rs
src/transaction_row/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
tests/: ft.rs  integration_test.rs
