[package]
name = "budget_manager"
version = "0.1.0"
authors = ["Tarin Mahmood <mahmood.tarin+home@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[main]]
[dependencies]
clap = { version = "^3.0.0-beta.2", features = ["yaml"] }
ansi_term = "0.12.1"
rand = "0.8.4"
serde = "1.0.130"
serde_json = "1.0"
gtk = { version = "0.3.1", package = "gtk4" }
adw = { package = "libadwaita", version = "0.1.0-alpha-6" }

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"

