[package]
name = "envelop-budget-lib"
version = "0.1.0"
authors = ["Tarin Mahmood <mahmood.tarin+home@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
tempfile = "3.3.0"
thiserror = "1.0.37"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std", "serde"] }
diesel = { version = "2.0.2", features = ["sqlite", "chrono"] }
diesel_migrations = "2.0.0"
dotenvy = "0.15"
regex = "1.8.1"

[dev-dependencies]
assert_cmd = "2.0.5"
predicates = "3.0.1"

