[package]
name = "budget_manager_ui"
version = "0.1.0"
authors = ["Tarin Mahmood <mahmood.tarin+home@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[main]]
[dependencies]
budget_manager = { path = "../budget_manager" }
clap = { version = "4.0.18", features = ["derive"] }
ansi_term = "0.12.1"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
adw = { package = "libadwaita", version = "0.2.0" }
tempfile = "3.3.0"

[dev-dependencies]
assert_cmd = "2.0.5"
predicates = "2.1.1"

[build-dependencies]
glib-build-tools = "0.16.0"

[dependencies.gtk]
package = "gtk4"
version = "0.5.0"
features = ["gnome_43"]
